tooling/nargo_cli/tests/snapshots/execution_failure/regression_9851/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
bug: Assertion is always false: Index out of bounds
  ┌─ src/main.nr:4:9
  │
4 │         g[10].0
  │         ----- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:4:9

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:4:9
  │
4 │         g[10].0
  │         -----
  │
  = Call stack:
    1: main
            at src/main.nr:4:9

Failed assertion
