tooling/nargo_cli/tests/snapshots/execution_failure/regression_9851/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:4:9
  │
4 │         g[10].0
  │         -----
  │
  = Call stack:
    1. src/main.nr:4:9

Failed assertion
