tooling/nargo_cli/tests/snapshots/execution_failure/regression_9851/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: 10 is out of bounds for the array of length 1
  ┌─ src/main.nr:4:9
  │
4 │         g[10].0
  │         -----
  │

Error interpreting main function
